--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "framer-motion": "^10.16.4",
     "install": "^0.13.0",
-    "next": "13.5.2",
+    "next": "^14.2.5",
     "npm": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
